UsusarioController/verificacao de permissao do usuario

--- a/APIFuncao/appsettings.json
+++ b/APIFuncao/appsettings.json
@@ -8,8 +8,8 @@
     },
     "AllowedHosts": "*",
     "ProjMongoDotnetDatabaseSettings": {
-        "PersonCollectionName": "Usuario",
+        "PersonCollectionName": "Funcao",
         "ConnectionString": "mongodb://localhost:27017",
-        "DatabaseName": "dbAndreAirLinesUsuario"
+        "DatabaseName": "dbAndreAirLinesFuncao"
     }
 }
