--- a/APIAeroporto/APIAeroporto.csproj
+++ b/APIAeroporto/APIAeroporto.csproj
@@ -7,6 +7,7 @@
   <ItemGroup>
     <PackageReference Include="MongoDB.Driver" Version="2.15.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="5.6.3" />
+    <PackageReference Include="System.IdentityModel.Tokens.Jwt" Version="6.17.0" />
   </ItemGroup>
 
   <ItemGroup>
